exports[`loading state`] = `
<div
  className="hFijfz">
  <h3
    className="cCcCMd">
    Operating on repositories...
  </h3>
  <div
    className="eMBGZc">
    Treating 
    42
     
    <svg
      className="octicons octicons-repo-clone-icon "
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M15 0H9v7c0 .55.45 1 1 1h1v1h1V8h3c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-4 7h-1V6h1v1zm4 0h-3V6h3v1zm0-2h-4V1h4v4zM4 5H3V4h1v1zm0-2H3V2h1v1zM2 1h6V0H1C.45 0 0 .45 0 1v12c0 .55.45 1 1 1h2v2l1.5-1.5L6 16v-2h5c.55 0 1-.45 1-1v-3H2V1zm9 10v2H6v-1H3v1H1v-2h10zM3 8h1v1H3V8zm1-1H3V6h1v1z"
        fillRule="evenodd" />
    </svg>
    ...
  </div>
  <div
    className="eMBGZc">
    Incoming transmission from GitHub!
  </div>
</div>
`;

exports[`populated`] = `
<div
  className="hFijfz">
  <h3
    className="cCcCMd">
    Bars are 
    <svg
      className="octicons octicons-repo-icon "
      height="16"
      viewBox="0 0 12 16"
      width="12"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z"
        fillRule="evenodd" />
    </svg>
    \'s issueish information!
  </h3>
  <div
    className="eMBGZc">
    Organization data received! 
    <svg
      className="octicons octicons-pulse-icon "
      height="16"
      viewBox="0 0 14 16"
      width="14"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M11.5 8L8.8 5.4 6.6 8.5 5.5 1.6 2.38 8H0v2h3.6l.9-1.8.9 5.4L9 8.5l1.6 1.5H14V8z"
        fillRule="evenodd" />
    </svg>
  </div>
  <div
    className="eMBGZc">
    Mouse over a bar to get repository data displayed here.
  </div>
</div>
`;

exports[`shouldnt have "s" at end of labels`] = `
<div
  className="hFijfz">
  <h3
    className="cCcCMd">
    some-repo
     
    <svg
      className="octicons octicons-repo-icon "
      height="16"
      viewBox="0 0 12 16"
      width="12"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z"
        fillRule="evenodd" />
    </svg>
  </h3>
  <div
    className="eIXhQ"
    color="#82ca9d">
    1
     
    issue
  </div>
  <div
    className="hyCOFy"
    color="#8884d8">
    0
     
    pull request
  </div>
</div>
`;

exports[`standard display`] = `
<div
  className="hFijfz">
  <h3
    className="cCcCMd">
    apollo-client
     
    <svg
      className="octicons octicons-repo-icon "
      height="16"
      viewBox="0 0 12 16"
      width="12"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z"
        fillRule="evenodd" />
    </svg>
  </h3>
  <div
    className="eIXhQ"
    color="#82ca9d">
    101
     
    issues
  </div>
  <div
    className="hyCOFy"
    color="#8884d8">
    8
     
    pull requests
  </div>
</div>
`;
